change host site

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://hdh-firebase-api-test.web.app
 NEXTAUTH_SECRET=SuperSecret
 
 GOOGLE_CLIENT_ID=foo
