--- a/firebase.json
+++ b/firebase.json
@@ -2,7 +2,11 @@
   "hosting": {
     "site": "hdh-firebase-api-test",
     "source": ".",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "frameworksBackend": {
       "region": "europe-west1"
     }
