--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "build": "^0.1.4",
-    "firebase": "^10.12.2",
-    "next": "14.2.4",
+    "firebase": "^10.12.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
